--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@
          <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabecalho">
+            <li class="cabecalho-lista-item">Sobre o site</li>
+            <li class="cabecalho-lista-item">Principais notícias</li>
