--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@
     <header class="cabecalho">
             <li class="cabecalho-lista-item">Sobre o site</li>
             <li class="cabecalho-lista-item">Principais notícias</li>
+        </ul>
+    </header>
+    <section>
+        <h2 class="notícias-titulo">Sobre o Site</h2>
+        <p class="notícias-texto-um"> O Notícias 24h é um site que tem por objetivo fornecer as principais informações de Primeiro de Maio e toda a região </p>
+        
