--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@
     <section>
         <h2 class="notícias-titulo">Sobre o Site</h2>
         <p class="notícias-texto-um"> O Notícias 24h é um site que tem por objetivo fornecer as principais informações de Primeiro de Maio e toda a região. Notícias sobre a cultura, educação, esporte, política, religião e saúde, além de entrevistas com as autoridades e os moradores de Primeiro de Maio.</p>
-        
+    </section>
+</body>
+</html>
