--- a/index.html
+++ b/index.html
@@ -19,3 +19,95 @@
     </section>
 </body>
 </html>
+<img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+    </section>
+
+    <section id="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Felipe.jpeg" alt="foto do Felipe">
+                <h3 class="estudante-nome">Felipe Gabriel Granayr</h3>
+                <a href="https://github.com/ProfEverlea><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                        <a href="https://instagram.com/everlearossi"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="guilherme.jpeg" alt="foto do Guilherme">
+                <h3 class="estudante-nome">Guilherme Gomes de Amorim Vieira</h3>
+                <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Murilo.jpeg" alt="foto do Murilo">
+                <h3 class="estudante-nome">Murilo Capel Oliveira</h3>
+                <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="dalto nathan.jpeg" alt="foto do dalto">
+                <h3 class="estudante-nome">Nathan Gabriel Martucho</h3>
+                <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Rafael.jpg" alt="foto do rafael">
+                <h3 class="estudante-nome">Rafael Amaro Fernandes</h3>
+                <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="foto tiagoo.jpeg" alt="foto do tiago">
+                <h3 class="estudante-nome">Tiago Muglio Checo</h3>
+                <img class="estudante-icone" src="github.png" alt="icone github">
+                <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png"
+                        alt="icone linkedin"></a>
+                <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <span></span>
+            <span></span>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="Alessandro.jpeg" alt="foto do alessandro">
+                <h3 class="estudante-nome">Alessandro Luiz Wagner Adam</h3>
+                <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="juio.jpeg" alt="foto do juio">
+                <h3 class="estudante-nome">Julio Cezar  dos Santos Junior</h3>
+                <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png"
+                        alt="icone github"></a>
+                <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone"
+                        src="linkedin.png" alt="icone linkedin"></a>
+                <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
+
+        </div>
+    </section>
+   
