--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </section>
 </body>
 </html>
-<img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+<img class="logo-imagem" src="download.jpeg" 
     </section>
 
-    <section id="estudante">
-        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-        <div class="estudante-todos">
+    <section id="Notícias">
+        <h2 class="Notícias-titulo"> Por 24h você é informado</h2>
+        <div class="tópicos-todos">
             <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="Felipe.jpeg" alt="foto do Felipe">
