--- a/index.html
+++ b/index.html
@@ -25,4 +25,10 @@
     <section id="Notícias">
         <h2 class="Notícias-titulo"> Líder de notícias de Primeiro de Maio e região</h2>
     </section>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="download.jpeg" alt="logo do site start">
+    </footer>
+</body>
+
+</html>
    
