--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Equipe Alura Start</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    </head>
+    
 <body>
     <header class="cabecalho">
             <li class="cabecalho-lista-item">Sobre o site</li>
@@ -23,6 +14,8 @@
 </body>
 </html>
 <img class="logo-imagem" src="download.jpeg" 
+<img class="cidade-imagem" src="primeiro de maio.jpg" alt="imagem do município de Primeiro de Maio">
+    </section>
     </section>
 
     <section id="Notícias">
