--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         </ul>
     </header>
     <section>
+        <div>
         <h2 class="notícias-titulo">Sobre o Site</h2>
         <p class="notícias-texto-um"> O Notícias 24h é um site que tem por objetivo fornecer as principais informações de Primeiro de Maio e toda a região. Notícias sobre a cultura, educação, esporte, política, religião e saúde, além de entrevistas com as autoridades e os moradores de Primeiro de Maio.</p>
     </section>
 </body>
 </html>
-<img class="logo-imagem" src="download.jpeg" 
+</div>
+<img class="logo-imagem" src="download.jpeg"
 <img class="cidade-imagem" src="primeiro de maio.jpg" alt="imagem do município de Primeiro de Maio">
     </section>
     </section>
