--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
 
     <section id="Notícias">
-        <h2 class="Notícias-titulo"> Líder de notícias de Primeiro de Maio e região</h2>
+        <h2 class="Notícias-titulo"> Compromisso com a verdade!</h2>
     </section>
  
    
