--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
     <section id="Notícias">
         <h2 class="Notícias-titulo"> Compromisso com a verdade!</h2>
     </section>
- 
+    <section id="site de notícias">
+        <h2 class="diretor-presidente-titulo">Quem criou o site Notícias 24h?</h2>
+        <div class="diretor-presidente">
+            <span></span>
+            <div class="diretor-presidente-div">
+                <img class="diretor-imagem" src="guilherme.jpeg" alt="foto do Guilherme">
+                <h3 class="diretor-nome">Guilherme Gomes de Amorim Vieira</h3>
+                <a href="https://github.com/amorim-guilherme><img class="estudante-icone" src="guilherme.jpeg"
+                        <a href="https://instagram.com/guilherme.amorim.vieira"><img class="estudante-icone" src="instagram.png"
+                        alt="icone instagram"></a>
+            </div>
    
