--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
                 <a href="https://github.com/amorim-guilherme><img class="estudante-icone" src="guilherme.jpeg"
                         <a href="https://instagram.com/guilherme.amorim.vieira"><img class="estudante-icone" src="instagram.png"
                         alt="icone instagram"></a>
+
+                        <footer class="rodape">
+                            <img class="rodape-imagem" src="rodape.png" alt="logo do site">
+                        </footer>
+                    </body>
+                    
+                    </html>
             </div>
    
